--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,3 @@
-@import "tailwindcss";
-*{  background-size:cover;
-    background-position: center;
-    margin: 0;
-    padding: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
